--- a/ecommerce/main/templates/main/about_us.html
+++ b/ecommerce/main/templates/main/about_us.html
@@ -1,83 +1,6 @@
+{% extends 'main/base_files/base.html' %}
 {% load static %}
-<!DOCTYPE html>
-<!--[if IE]><![endif]-->
-<!--[if IE 8 ]><html dir="ltr" lang="en" class="ie8"><![endif]-->
-<!--[if IE 9 ]><html dir="ltr" lang="en" class="ie9"><![endif]-->
-<!--[if (gt IE 9)|!(IE)]><!-->
-<html dir="ltr" lang="en">
-<!--<![endif]-->
-
-<meta http-equiv="content-type" content="text/html;charset=utf-8" />
-
-<head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>About Us</title>
-    <base />
-    <link href="{% static 'vendors/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet" media="screen" />
-    <link href="{% static 'vendors/jquery/swiper/css/swiper.min.css' %}" rel="stylesheet" type="text/css" />
-    <!-- icon font -->
-    <link href="{% static 'vendors/font-awesome/css/font-awesome.min.css' %}" rel="stylesheet" type="text/css" />
-    <link href="{% static 'vendors/ionicons/css/ionicons.css' %}" rel="stylesheet" type="text/css" />
-    <!-- use for ostromi -->
-
-    <!-- end icon font -->
-    <link href="{% static 'theme/tt_ostromi2/stylesheet/stylesheet.css' %}" rel="stylesheet">
-    <link href="{% static 'theme/tt_ostromi2/stylesheet/plaza/header/header2.css' %}" rel="stylesheet">
-    <link href="{% static 'theme/tt_ostromi2/stylesheet/plaza/theme.css' %} " rel="stylesheet">
-    <script src="{% static 'vendors/jquery/jquery-2.1.1.min.js' %}"></script>
-    <script src="{% static 'vendors/jquery/swiper/js/swiper.min.js' %}"></script>
-    <script src="{%static 'vendors/plaza/ultimatemenu/menu.js' %}"></script>
-    <script src="{%static 'vendors/plaza/newsletter/mail.js' %}"></script>
-    <script src="{%static 'vendors/common.js' %}"></script>
-    <link href="{%static 'image/catalog/cart.png' %}" rel="icon" />
-    <!-- Quick view -->
-    <script src="{%static 'vendors/plaza/cloudzoom/cloud-zoom.1.0.2.min.js' %}"></script>
-    <script src="{%static 'vendors/plaza/cloudzoom/zoom.js' %}"></script>
-    <script src="{%static 'vendors/plaza/quickview/quickview.js' %}"></script>
-    <link href="{%static 'theme/tt_ostromi2/stylesheet/plaza/quickview/quickview.css' %}" rel="stylesheet"
-        type="text/css" />
-    <!-- General -->
-    <!-- Sticky Menu -->
-    <script>
-        $(document).ready(function () {
-            var height_box_scroll = $('.scroll-fix').outerHeight(true);
-            $(window).scroll(function () {
-                if ($(this).scrollTop() > 400) {
-                    $('.scroll-fix').addClass("scroll-fixed");
-                    $('body').css('padding-top', height_box_scroll);
-                } else {
-                    $('.scroll-fix').removeClass("scroll-fixed");
-                    $('body').css('padding-top', 0);
-                }
-            });
-        });
-    </script>
-    <!-- Scroll Top -->
-    <script>
-        $("#back-top").hide();
-        $(function () {
-            $(window).scroll(function () {
-                if ($(this).scrollTop() > $('body').height() / 3) {
-                    $('#back-top').fadeIn();
-                } else {
-                    $('#back-top').fadeOut();
-                }
-            });
-            $('#back-top').click(function () {
-                $('body,html').animate({scrollTop: 0}, 800);
-                return false;
-            });
-        });
-    </script>
-    <!-- Advance -->
-
-    <!-- Bootstrap Js -->
-    <script src="{%static 'vendors/bootstrap/js/bootstrap.min.js' %}"></script>
-</head>
-
-<body class="information-information-4">
+{% block content %}
     <div class="wrapper">
         <div id="back-top"><i class="ion-chevron-up"></i></div>
         <nav id="top">
@@ -1120,12 +1043,5 @@
                 </div>
             </div>
         </footer>
-        <!--
-OpenCart is open source software and you are free to remove the powered by OpenCart if you want, but its generally accepted practise to make a small donation.
-Please donate via PayPal to donate@opencart.com
-//-->
     </div>
-</body>
-<!-- Mirrored from ostromi2.demo.towerthemes.com/about_us by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 17 Mar 2021 14:42:39 GMT -->
-
-</html>
+{% endblock content %}
