added: nav-bar.html

--- a/ecommerce/main/templates/main/account-login.html
+++ b/ecommerce/main/templates/main/account-login.html
@@ -196,243 +196,8 @@
                         }
                     </style>
 
+                    {% include 'main/base_files/nav-bar.html' %}
 
-                    <div class="pt-menu mobile-menu hidden-lg  " id="pt-menu-2137">
-
-                        <input type="hidden" id="menu-effect-2137" class="menu-effect" value="none" />
-                        <div class="pt-menu-bar">
-                            <i class="ion-android-menu" aria-hidden="true"></i>
-                            <i class="ion-android-close" aria-hidden="true"></i>
-                        </div>
-                        <ul class="ul-top-items">
-                            <li class="menu-mobile-title">
-                                <h3>Mobile Menu</h3>
-                            </li>
-                            <li class="li-top-item ">
-                                <a class="a-top-link a-item" href="index.html">
-                                    <span>Home</span>
-                                </a>
-                            </li>
-                            <li class="li-top-item ">
-                                <a class="a-top-link a-item" href="cookware.html">
-                                    <span>Cookware</span>
-                                </a>
-                                <span class="top-click-show a-click-show">
-                                    <i class="ion-ios-arrow-down" aria-hidden="true"></i>
-                                    <i class="ion-ios-arrow-up" aria-hidden="true"></i>
-                                </span>
-
-                                <div class="sub-menu-container">
-                                    <ul class="ul-second-items">
-                                        <li class="li-second-items">
-                                            <a href="cookware/cookware-sets.html" class="a-second-link a-item">
-                                                <span class="a-second-title">Cookware Sets</span>
-                                            </a>
-                                            <span class="second-click-show a-click-show">
-                                                <i class="ion-ios-arrow-down" aria-hidden="true"></i>
-                                                <i class="ion-ios-arrow-up" aria-hidden="true"></i>
-                                            </span>
-                                            <div class="flyout-third-items">
-                                                <ul class="ul-third-items">
-                                                    <li class="li-third-items">
-                                                        <a href="cookware/cookware-sets/ceramic.html"
-                                                            class="a-third-link"><span
-                                                                class="a-third-title">Ceramic</span></a>
-                                                    </li>
-                                                    <li class="li-third-items">
-                                                        <a href="cookware/cookware-sets/dishwashersafe.html"
-                                                            class="a-third-link"><span
-                                                                class="a-third-title">Dishwasher-Safe</span></a>
-                                                    </li>
-                                                    <li class="li-third-items">
-                                                        <a href="cookware/cookware-sets/gas-stovetop-compatible.html"
-                                                            class="a-third-link"><span class="a-third-title">Gas
-                                                                Stovetop Compatible</span></a>
-                                                    </li>
-                                                    <li class="li-third-items">
-                                                        <a href="cookware/cookware-sets/induction-stovetop-compatible.html"
-                                                            class="a-third-link"><span class="a-third-title">Induction
-                                                                Stovetop
-                                                                Compatible</span></a>
-                                                    </li>
-                                                    <li class="li-third-items">
-                                                        <a href="cookware/cookware-sets/mirror-satin.html"
-                                                            class="a-third-link"><span class="a-third-title">Mirror
-                                                                Satin</span></a>
-                                                    </li>
-                                                </ul>
-                                            </div>
-                                        </li>
-                                        <li class="li-second-items">
-                                            <a href="cookware/pans.html" class="a-second-link a-item">
-                                                <span class="a-second-title">Pans</span>
-                                            </a>
-                                            <span class="second-click-show a-click-show">
-                                                <i class="ion-ios-arrow-down" aria-hidden="true"></i>
-                                                <i class="ion-ios-arrow-up" aria-hidden="true"></i>
-                                            </span>
-                                            <div class="flyout-third-items">
-                                                <ul class="ul-third-items">
-                                                    <li class="li-third-items">
-                                                        <a href="cookware/pans/hard-anodizeds.html"
-                                                            class="a-third-link"><span class="a-third-title">Hard
-                                                                Anodized</span></a>
-                                                    </li>
-                                                    <li class="li-third-items">
-                                                        <a href="cookware/pans/scratch-resistant.html"
-                                                            class="a-third-link"><span class="a-third-title">Scratch
-                                                                Resistant</span></a>
-                                                    </li>
-                                                    <li class="li-third-items">
-                                                        <a href="cookware/pans/thermo-spot.html"
-                                                            class="a-third-link"><span
-                                                                class="a-third-title">Thermo-Spot</span></a>
-                                                    </li>
-                                                    <li class="li-third-items">
-                                                        <a href="cookware/pans/titanium-nonstick.html"
-                                                            class="a-third-link"><span class="a-third-title">Titanium
-                                                                Nonstick </span></a>
-                                                    </li>
-                                                    <li class="li-third-items">
-                                                        <a href="cookware/pans/ultimate.html" class="a-third-link"><span
-                                                                class="a-third-title">Ultimate</span></a>
-                                                    </li>
-                                                </ul>
-                                            </div>
-                                        </li>
-                                        <li class="li-second-items">
-                                            <a href="cookware/skillets.html" class="a-second-link a-item">
-                                                <span class="a-second-title">Skillets</span>
-                                            </a>
-                                            <span class="second-click-show a-click-show">
-                                                <i class="ion-ios-arrow-down" aria-hidden="true"></i>
-                                                <i class="ion-ios-arrow-up" aria-hidden="true"></i>
-                                            </span>
-                                            <div class="flyout-third-items">
-                                                <ul class="ul-third-items">
-                                                    <li class="li-third-items">
-                                                        <a href="cookware/skillets/aluminum-nonstick.html"
-                                                            class="a-third-link"><span class="a-third-title">Aluminum
-                                                                Nonstick</span></a>
-                                                    </li>
-                                                    <li class="li-third-items">
-                                                        <a href="cookware/skillets/calphalon.html"
-                                                            class="a-third-link"><span
-                                                                class="a-third-title">Calphalon</span></a>
-                                                    </li>
-                                                    <li class="li-third-items">
-                                                        <a href="cookware/skillets/contemporary.html"
-                                                            class="a-third-link"><span
-                                                                class="a-third-title">Contemporary</span></a>
-                                                    </li>
-                                                    <li class="li-third-items">
-                                                        <a href="cookware/skillets/hard-anodized.html"
-                                                            class="a-third-link"><span
-                                                                class="a-third-title">Hard-Anodized</span></a>
-                                                    </li>
-                                                    <li class="li-third-items">
-                                                        <a href="cookware/skillets/sauce-pan.html"
-                                                            class="a-third-link"><span class="a-third-title">Sauce
-                                                                Pan</span></a>
-                                                    </li>
-                                                </ul>
-                                            </div>
-                                        </li>
-                                        <li class="li-second-items">
-                                            <a href="cookware/teakettles.html" class="a-second-link a-item">
-                                                <span class="a-second-title">Teakettles</span>
-                                            </a>
-                                            <span class="second-click-show a-click-show">
-                                                <i class="ion-ios-arrow-down" aria-hidden="true"></i>
-                                                <i class="ion-ios-arrow-up" aria-hidden="true"></i>
-                                            </span>
-                                            <div class="flyout-third-items">
-                                                <ul class="ul-third-items">
-                                                    <li class="li-third-items">
-                                                        <a href="cookware/teakettles/aura-stainless.html"
-                                                            class="a-third-link"><span class="a-third-title">Aura
-                                                                Stainless</span></a>
-                                                    </li>
-                                                    <li class="li-third-items">
-                                                        <a href="cookware/teakettles/cuisinart.html"
-                                                            class="a-third-link"><span
-                                                                class="a-third-title">Cuisinart</span></a>
-                                                    </li>
-                                                    <li class="li-third-items">
-                                                        <a href="cookware/teakettles/homeinart.html"
-                                                            class="a-third-link"><span
-                                                                class="a-third-title">Homeinart</span></a>
-                                                    </li>
-                                                    <li class="li-third-items">
-                                                        <a href="cookware/teakettles/kettle-stainless.html"
-                                                            class="a-third-link"><span class="a-third-title">Kettle
-                                                                Stainless</span></a>
-                                                    </li>
-                                                    <li class="li-third-items">
-                                                        <a href="cookware/teakettles/steel-stovetop.html"
-                                                            class="a-third-link"><span class="a-third-title">Steel
-                                                                Stovetop</span></a>
-                                                    </li>
-                                                </ul>
-                                            </div>
-                                        </li>
-                                    </ul>
-                                </div>
-                            </li>
-                            <li class="li-top-item ">
-                                <a class="a-top-link a-item" href="appliances.html">
-                                    <span>Appliances</span>
-                                </a>
-                            </li>
-                            <li class="li-top-item ">
-                                <a class="a-top-link a-item" href="bakeware.html">
-                                    <span>Bakeware</span>
-                                </a>
-                            </li>
-                            <li class="li-top-item ">
-                                <a class="a-top-link a-item" href="knives.html">
-                                    <span>Knives</span>
-                                </a>
-                            </li>
-                            <li class="li-top-item ">
-                                <a class="a-top-link a-item" href="drinkware.html">
-                                    <span>Drinkware</span>
-                                </a>
-                            </li>
-                            <li class="li-top-item ">
-                                <a class="a-top-link a-item" href="kitchenwares.html">
-                                    <span>Kitchenwares</span>
-                                </a>
-                            </li>
-                            <li class="li-top-item ">
-                                <a class="a-top-link a-item" href="tablewares.html">
-                                    <span>Tableware</span>
-                                </a>
-                            </li>
-                        </ul>
-                    </div>
-
-
-                    <div id="logo">
-                        <a href="index.html"><img src="image/catalog/logo/ostromi2.png" title="" alt=""
-                                class="img-responsive" /></a> </div>
-
-                    <div class="col-cart">
-
-                        <a href="account-login.html?route=account/wishlist" id="wishlist-total"><span><span
-                                    class="text-wishlist">Wish List</span> <span class="txt-count">0</span></span></a>
-                        <div id="cart" class="btn-group btn-block">
-                            <button type="button" data-toggle="dropdown" data-loading-text="Loading..."
-                                class="btn btn-inverse btn-block btn-lg dropdown-toggle"><span id="cart-total"><span
-                                        class="txt-count">0</span> <span class="text-cart">$0.00</span></span></button>
-                            <ul class="dropdown-menu pull-right">
-                                <li>
-                                    <span class="cart-dropdown-menu-close"><i class="ion-android-close"></i></span>
-                                    <p class="text-center">Your shopping cart is empty!</p>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
                 </div>
                 <div class="col-search">
                     <div id="search-by-category">
