--- a/ecommerce/main/templates/main/search.html
+++ b/ecommerce/main/templates/main/search.html
@@ -202,251 +202,7 @@
                             font-weight: 400;
                         }
                     </style>
-
-
-                    <div class="pt-menu mobile-menu hidden-lg  " id="pt-menu-6091">
-
-                        <input type="hidden" id="menu-effect-6091" class="menu-effect" value="none" />
-                        <div class="pt-menu-bar">
-                            <i class="ion-android-menu" aria-hidden="true"></i>
-                            <i class="ion-android-close" aria-hidden="true"></i>
-                        </div>
-                        <ul class="ul-top-items">
-                            <li class="menu-mobile-title">
-                                <h3>Mobile Menu</h3>
-                            </li>
-                            <li class="li-top-item ">
-                                <a class="a-top-link a-item" href="http://ostromi2.demo.towerthemes.com/">
-                                    <span>Home</span>
-                                </a>
-                            </li>
-                            <li class="li-top-item ">
-                                <a class="a-top-link a-item" href="http://ostromi2.demo.towerthemes.com/cookware">
-                                    <span>Cookware</span>
-                                </a>
-                                <span class="top-click-show a-click-show">
-                                    <i class="ion-ios-arrow-down" aria-hidden="true"></i>
-                                    <i class="ion-ios-arrow-up" aria-hidden="true"></i>
-                                </span>
-
-                                <div class="sub-menu-container">
-                                    <ul class="ul-second-items">
-                                        <li class="li-second-items">
-                                            <a href="http://ostromi2.demo.towerthemes.com/cookware/cookware-sets"
-                                                class="a-second-link a-item">
-                                                <span class="a-second-title">Cookware Sets</span>
-                                            </a>
-                                            <span class="second-click-show a-click-show">
-                                                <i class="ion-ios-arrow-down" aria-hidden="true"></i>
-                                                <i class="ion-ios-arrow-up" aria-hidden="true"></i>
-                                            </span>
-                                            <div class="flyout-third-items">
-                                                <ul class="ul-third-items">
-                                                    <li class="li-third-items">
-                                                        <a href="http://ostromi2.demo.towerthemes.com/cookware/cookware-sets/ceramic"
-                                                            class="a-third-link"><span
-                                                                class="a-third-title">Ceramic</span></a>
-                                                    </li>
-                                                    <li class="li-third-items">
-                                                        <a href="http://ostromi2.demo.towerthemes.com/cookware/cookware-sets/dishwashersafe"
-                                                            class="a-third-link"><span
-                                                                class="a-third-title">Dishwasher-Safe</span></a>
-                                                    </li>
-                                                    <li class="li-third-items">
-                                                        <a href="http://ostromi2.demo.towerthemes.com/cookware/cookware-sets/gas-stovetop-compatible"
-                                                            class="a-third-link"><span class="a-third-title">Gas
-                                                                Stovetop Compatible</span></a>
-                                                    </li>
-                                                    <li class="li-third-items">
-                                                        <a href="http://ostromi2.demo.towerthemes.com/cookware/cookware-sets/induction-stovetop-compatible"
-                                                            class="a-third-link"><span class="a-third-title">Induction
-                                                                Stovetop
-                                                                Compatible</span></a>
-                                                    </li>
-                                                    <li class="li-third-items">
-                                                        <a href="http://ostromi2.demo.towerthemes.com/cookware/cookware-sets/mirror-satin"
-                                                            class="a-third-link"><span class="a-third-title">Mirror
-                                                                Satin</span></a>
-                                                    </li>
-                                                </ul>
-                                            </div>
-                                        </li>
-                                        <li class="li-second-items">
-                                            <a href="http://ostromi2.demo.towerthemes.com/cookware/pans"
-                                                class="a-second-link a-item">
-                                                <span class="a-second-title">Pans</span>
-                                            </a>
-                                            <span class="second-click-show a-click-show">
-                                                <i class="ion-ios-arrow-down" aria-hidden="true"></i>
-                                                <i class="ion-ios-arrow-up" aria-hidden="true"></i>
-                                            </span>
-                                            <div class="flyout-third-items">
-                                                <ul class="ul-third-items">
-                                                    <li class="li-third-items">
-                                                        <a href="http://ostromi2.demo.towerthemes.com/cookware/pans/hard-anodizeds"
-                                                            class="a-third-link"><span class="a-third-title">Hard
-                                                                Anodized</span></a>
-                                                    </li>
-                                                    <li class="li-third-items">
-                                                        <a href="http://ostromi2.demo.towerthemes.com/cookware/pans/scratch-resistant"
-                                                            class="a-third-link"><span class="a-third-title">Scratch
-                                                                Resistant</span></a>
-                                                    </li>
-                                                    <li class="li-third-items">
-                                                        <a href="http://ostromi2.demo.towerthemes.com/cookware/pans/thermo-spot"
-                                                            class="a-third-link"><span
-                                                                class="a-third-title">Thermo-Spot</span></a>
-                                                    </li>
-                                                    <li class="li-third-items">
-                                                        <a href="http://ostromi2.demo.towerthemes.com/cookware/pans/titanium-nonstick"
-                                                            class="a-third-link"><span class="a-third-title">Titanium
-                                                                Nonstick </span></a>
-                                                    </li>
-                                                    <li class="li-third-items">
-                                                        <a href="http://ostromi2.demo.towerthemes.com/cookware/pans/ultimate"
-                                                            class="a-third-link"><span
-                                                                class="a-third-title">Ultimate</span></a>
-                                                    </li>
-                                                </ul>
-                                            </div>
-                                        </li>
-                                        <li class="li-second-items">
-                                            <a href="http://ostromi2.demo.towerthemes.com/cookware/skillets"
-                                                class="a-second-link a-item">
-                                                <span class="a-second-title">Skillets</span>
-                                            </a>
-                                            <span class="second-click-show a-click-show">
-                                                <i class="ion-ios-arrow-down" aria-hidden="true"></i>
-                                                <i class="ion-ios-arrow-up" aria-hidden="true"></i>
-                                            </span>
-                                            <div class="flyout-third-items">
-                                                <ul class="ul-third-items">
-                                                    <li class="li-third-items">
-                                                        <a href="http://ostromi2.demo.towerthemes.com/cookware/skillets/aluminum-nonstick"
-                                                            class="a-third-link"><span class="a-third-title">Aluminum
-                                                                Nonstick</span></a>
-                                                    </li>
-                                                    <li class="li-third-items">
-                                                        <a href="http://ostromi2.demo.towerthemes.com/cookware/skillets/calphalon"
-                                                            class="a-third-link"><span
-                                                                class="a-third-title">Calphalon</span></a>
-                                                    </li>
-                                                    <li class="li-third-items">
-                                                        <a href="http://ostromi2.demo.towerthemes.com/cookware/skillets/contemporary"
-                                                            class="a-third-link"><span
-                                                                class="a-third-title">Contemporary</span></a>
-                                                    </li>
-                                                    <li class="li-third-items">
-                                                        <a href="http://ostromi2.demo.towerthemes.com/cookware/skillets/hard-anodized"
-                                                            class="a-third-link"><span
-                                                                class="a-third-title">Hard-Anodized</span></a>
-                                                    </li>
-                                                    <li class="li-third-items">
-                                                        <a href="http://ostromi2.demo.towerthemes.com/cookware/skillets/sauce-pan"
-                                                            class="a-third-link"><span class="a-third-title">Sauce
-                                                                Pan</span></a>
-                                                    </li>
-                                                </ul>
-                                            </div>
-                                        </li>
-                                        <li class="li-second-items">
-                                            <a href="http://ostromi2.demo.towerthemes.com/cookware/teakettles"
-                                                class="a-second-link a-item">
-                                                <span class="a-second-title">Teakettles</span>
-                                            </a>
-                                            <span class="second-click-show a-click-show">
-                                                <i class="ion-ios-arrow-down" aria-hidden="true"></i>
-                                                <i class="ion-ios-arrow-up" aria-hidden="true"></i>
-                                            </span>
-                                            <div class="flyout-third-items">
-                                                <ul class="ul-third-items">
-                                                    <li class="li-third-items">
-                                                        <a href="http://ostromi2.demo.towerthemes.com/cookware/teakettles/aura-stainless"
-                                                            class="a-third-link"><span class="a-third-title">Aura
-                                                                Stainless</span></a>
-                                                    </li>
-                                                    <li class="li-third-items">
-                                                        <a href="http://ostromi2.demo.towerthemes.com/cookware/teakettles/cuisinart"
-                                                            class="a-third-link"><span
-                                                                class="a-third-title">Cuisinart</span></a>
-                                                    </li>
-                                                    <li class="li-third-items">
-                                                        <a href="http://ostromi2.demo.towerthemes.com/cookware/teakettles/homeinart"
-                                                            class="a-third-link"><span
-                                                                class="a-third-title">Homeinart</span></a>
-                                                    </li>
-                                                    <li class="li-third-items">
-                                                        <a href="http://ostromi2.demo.towerthemes.com/cookware/teakettles/kettle-stainless"
-                                                            class="a-third-link"><span class="a-third-title">Kettle
-                                                                Stainless</span></a>
-                                                    </li>
-                                                    <li class="li-third-items">
-                                                        <a href="http://ostromi2.demo.towerthemes.com/cookware/teakettles/steel-stovetop"
-                                                            class="a-third-link"><span class="a-third-title">Steel
-                                                                Stovetop</span></a>
-                                                    </li>
-                                                </ul>
-                                            </div>
-                                        </li>
-                                    </ul>
-                                </div>
-                            </li>
-                            <li class="li-top-item ">
-                                <a class="a-top-link a-item" href="http://ostromi2.demo.towerthemes.com/appliances">
-                                    <span>Appliances</span>
-                                </a>
-                            </li>
-                            <li class="li-top-item ">
-                                <a class="a-top-link a-item" href="http://ostromi2.demo.towerthemes.com/bakeware">
-                                    <span>Bakeware</span>
-                                </a>
-                            </li>
-                            <li class="li-top-item ">
-                                <a class="a-top-link a-item" href="http://ostromi2.demo.towerthemes.com/knives">
-                                    <span>Knives</span>
-                                </a>
-                            </li>
-                            <li class="li-top-item ">
-                                <a class="a-top-link a-item" href="http://ostromi2.demo.towerthemes.com/drinkware">
-                                    <span>Drinkware</span>
-                                </a>
-                            </li>
-                            <li class="li-top-item ">
-                                <a class="a-top-link a-item" href="http://ostromi2.demo.towerthemes.com/kitchenwares">
-                                    <span>Kitchenwares</span>
-                                </a>
-                            </li>
-                            <li class="li-top-item ">
-                                <a class="a-top-link a-item" href="http://ostromi2.demo.towerthemes.com/tablewares">
-                                    <span>Tableware</span>
-                                </a>
-                            </li>
-                        </ul>
-                    </div>
-
-
-                    <div id="logo">
-                        <a href="http://ostromi2.demo.towerthemes.com/"><img
-                                src="http://ostromi2.demo.towerthemes.com/image/catalog/logo/ostromi2.png" title=""
-                                alt="" class="img-responsive" /></a> </div>
-
-                    <div class="col-cart">
-
-                        <a href="http://ostromi2.demo.towerthemes.com/index.php?route=account/wishlist"
-                            id="wishlist-total"><span><span class="text-wishlist">Wish List</span> <span
-                                    class="txt-count">0</span></span></a>
-                        <div id="cart" class="btn-group btn-block">
-                            <button type="button" data-toggle="dropdown" data-loading-text="Loading..."
-                                class="btn btn-inverse btn-block btn-lg dropdown-toggle"><span id="cart-total"><span
-                                        class="txt-count">0</span> <span class="text-cart">$0.00</span></span></button>
-                            <ul class="dropdown-menu pull-right">
-                                <li>
-                                    <span class="cart-dropdown-menu-close"><i class="ion-android-close"></i></span>
-                                    <p class="text-center">Your shopping cart is empty!</p>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
+                    {% include 'main/base_files/nav-bar.html' %}
                 </div>
                 <div class="col-search">
                     <div id="search-by-category">
