--- a/ecommerce/main/templates/main/product.html
+++ b/ecommerce/main/templates/main/product.html
@@ -413,7 +413,7 @@
 
 
                     <div id="logo">
-                        <a href="index.html"><img src="image/catalog/logo/ostromi2.png" title="" alt=""
+                        <a href="index.html"><img src="{% static 'image/catalog/logo/ostromi2.png' %}" title="" alt=""
                                 class="img-responsive" /></a> </div>
 
                     <div class="col-cart">
