created footer-base-file and included it in every page

--- a/ecommerce/main/templates/main/base_files/nav-bar.html
+++ b/ecommerce/main/templates/main/base_files/nav-bar.html
@@ -205,7 +205,7 @@
 
 
 <div id="logo">
-    <a href="index.html"><img src="{% static 'image/catalog/logo/ostromi2.png' %}" title="" alt=""
+    <a href="{% url 'main' %}"><img src="{% static 'image/catalog/logo/ostromi2.png' %}" title="" alt=""
             class="img-responsive" /></a> </div>
 
 <div class="col-cart">
